# commander

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
db/migration/agent/: U1__create_chat_tables.sql  U2__create_token_usages.sql  U5__drop_memory_index.sql  V2__create_token_usages.sql  V4__create_tool_execution_rules.sql
db/migrations/agent/: U4__create_tool_execution_rules.sql  U6__create_awaiting_tool_approvals.sql  V1__create_chat_tables.sql  V5__create_memory_index.sql  V6__create_awaiting_tool_approvals.sql  V7__create_jobs.sql  V8__create_job_runs.sql
docs/: architecture.md  context.md  database.md  deep-research.md  memory.md  process-flow.md  process.md  sequence.md  tools.md
docs/openapi/: openapi.yaml
src/: domain.rs  infrastructure.rs  main.rs  presentation.rs
src/application/: error.rs  usecase.rs
src/application/error/: agent_usecase_error.rs  digest_usecase_error.rs  job_usecase_error.rs  llm_client_error.rs  survey_usecase_error.rs  tool_usecase_error.rs
src/application/port/: llm_client.rs
src/application/usecase/: agent_usecase.rs  digest_usecase.rs  job_usecase.rs  survey_usecase.rs  tool_usecase.rs
src/domain/: error.rs  model.rs  port.rs  repository.rs  service.rs  util.rs
src/domain/error/: agent_error.rs  awaiting_tool_approval_repository_error.rs  chat_repository_error.rs  chat_session_error.rs  compaction_service_error.rs  deep_research_error.rs  embedding_provider_error.rs  job_error.rs  job_run_error.rs  (+9 more)
src/infrastructure/: embedding.rs  llm.rs  persistence.rs  tool.rs
src/presentation/: cli.rs  error.rs  handler.rs
(+97 files in other folders)
