[package]
name = "work-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1.129.0", features = ["behavior-version-latest"] }
clap = { version = "4.6.0", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
log = "0.4.29"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
